[package]
name = "nwc"
version = "0.1.0"
edition = "2024"
authors = ["Kibet arap Sum <arapsum@gmail.com"]

[[bin]]
name = "nwc"
path = "src/bin/main.rs"

[lib]
name = "nwc"
path = "src/lib.rs"

[dependencies]
assert_cmd = "2.2.0"
bytecount = "0.6.9"
clap = { version = "4.6.0", features = ["derive"] }
predicates = "3.1.4"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
